# ferrovision

./: .gitignore  .gitmodules  Cargo.toml  README.md  vset.toml
src/: main.rs
src/modules/: mod.rs
src/modules/filter/: contourarea.rs  mod.rs  percentfilled.rs
src/modules/input/: mod.rs  picamera.rs
src/modules/output/: mod.rs  networktable.rs
src/modules/threshold/: complexcolor.rs  mod.rs  simplecolor.rs
src/site/: index.html
