[package]
name = "ferrovision"
version = "0.1.0"
authors = ["wozeparrot <wozeparrot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.29.3", default_features = false, features = ["opencv-32"]}
itertools = "0.8.2"
toml = "0.5.6"
nt = { git = "https://github.com/wozeparrot/nt-rs" }
tokio = "0.2.12"